--- a/code/figure5.Rmd
+++ b/code/figure5.Rmd
@@ -1,33 +1,10 @@
-```{r oncoprint-top100-plus-panel-data-generation, eval = FALSE}
-load("../data/gdc_reactome_path_analysis.Rda") ## load data
-umap_cancertype <- data.table::fread("../data/umap_3d_coors.tsv")
-load("../data/moderate_enrich_prob.Rda") 
-load("../data/kelly.colours.rda")
-
-### Figure A - oncoprint style top 100 pathways
-
-top100path <- gdc_reactome_path_analysis %>% rowSums() %>% as.data.frame() %>% rownames_to_column(var = "path_name") %>% arrange(desc(.)) %>% .[1:100,] %>% .[, "path_name"] ## getting the top100 mutated pathways in class
-
-top100path <- gdc_reactome_path_analysis[top100path, ] ## selecting the top 100 paths
-
-top100path[top100path == "1"] <- "MUT" ## categorize boolean values
-top100path[top100path == "0"] <- " "
-
-onco_res <- oncoPrint(top100path,
-                      remove_empty_columns = F, remove_empty_rows = F,
-                      right_annotation = NULL, top_annotation = NULL)
-  
-clust_col_order <- names(top100path[,onco_res@column_order])
-path_row_order <- rownames(top100path[onco_res@row_order,])
-
-onco_ggplot <- gdc_reactome_path_analysis %>% .[rownames(.) %in% path_row_order,] %>% ## only include the top 10 paths
-  rownames_to_column(var = "path_name") %>% ## path_name to col
-  gather(., key = "sample_id", value = "mutation_status", -path_name) %>% ## wide to long format
-  mutate(path_name = factor(.$path_name, levels = c(rev(path_row_order))), ## factor to force oncoprint order
-         sample_id = factor(.$sample_id, levels = c(clust_col_order)))
-save(onco_ggplot, file = "onco_ggplot.Rda")
-
-### Figure B - Pathway enrichment by cluster
+---
+output: html_document
+editor_options: 
+  chunk_output_type: console
+---
+```{r figure5-data-generation, eval = FALSE}
+### Figure A - Pathway enrichment by cluster
 
 ## Getting the total number of tumor samples in each cluster
 n_tumor_in_clust <- as.data.frame(table(umap_cancertype$clust_knn)) %>% ## table the number of tumors in each cluster
@@ -233,26 +210,7 @@ save(pathway_counts, bp.cluster.colors, file = "barplot_pathways_fig2b.rda")
 ```
 
 ```{r figure-5-plot, fig.align= 'center', fig.height= 7, fig.width = 7}
-
-### Figure A - Waterfall plot of top 100 mutated pathways
-load("../data/onco_ggplot.Rda") ## load data
-onco_color <- c("0" = "grey", "1" = "firebrick3") ## color scheme for oncoprint
-
-fig5A <- ggplot(data = onco_ggplot, aes(x=sample_id, y=path_name)) + 
-  geom_tile(aes(fill = as.character(mutation_status))) +
-  scale_fill_manual(values = onco_color) +
-  theme_classic() +
-  xlab("Pan-Cancer (n=7,607 tumor samples)") +
-  ylab("377 pathways") +
-  theme(axis.text.x = element_blank(),
-        axis.text.y = element_blank(),
-        axis.title.x = element_text(size = 10),
-        axis.title.y = element_text(size = 10),
-        axis.ticks = element_blank(),
-        axis.line = element_blank(),
-        legend.position = "none")
-
-### Figure B - Effect size heatmap
+### Figure A - Effect size heatmap
 load("../data/effect_heatmap.Rda") ## load data
 
 ## Function to duplicate discrete axis labels
@@ -269,7 +227,7 @@ guide_train.guide_axis_trans <- function(x, ...) {
   trained
 }
 
-fig5B <- ggplot(data = effect_heatmap, aes(y = cluster, x = path_name)) +
+fig5A <- ggplot(data = effect_heatmap, aes(x = cluster, y = path_name)) +
   geom_tile(size = 1, aes(fill = effect_size)) +
   scale_fill_fermenter( ## custom color scale
     type = "div",
@@ -279,11 +237,11 @@ fig5B <- ggplot(data = effect_heatmap, aes(y = cluster, x = path_name)) +
     name = "Effect Size",
     labels = c(-1, "", 0.5, "", "", 0, "", "", 0.5, "", 1)
   ) +
-  facet_wrap(~cluster, ncol = 1, strip.position = "right", scales = "free_y") + ## facet by cluster
+  #facet_wrap(cluster~., ncol = 1, strip.position = "right", scales = "free_y") + ## facet by cluster
+  facet_grid(.~cluster, scales = "free", space = "free", switch = "x") +
   guides(fill = guide_colorsteps(title.position = "top", title.hjust = 0.5)) +
-  xlab("377 pathways, ward.D2 clustered") +
-  ylab("Clusters") +
-  scale_x_discrete(position = "top") + ## move x labels to top
+  ylab("377 pathways, ward.D2 clustered") + xlab("Clusters") + 
+  scale_x_discrete(position = "bottom") + ## move x labels to top
   guides(y.sec = guide_axis_label_trans(~ paste(.x))) + ## Duplicate axis.text on right side (cluster)
   theme(
     axis.text.x = element_blank(),
@@ -297,17 +255,18 @@ fig5B <- ggplot(data = effect_heatmap, aes(y = cluster, x = path_name)) +
     panel.background = element_blank(),
     panel.spacing = unit(0, "lines"),
     ## legend parameters
-    legend.position = "bottom",
-    legend.key.height = unit(0.3, "lines"),
-    legend.text = element_text(size = 5),
-    legend.title = element_text(size = 5),
+    legend.position = "top",
+    legend.key.height = unit(0.6, "lines"),
+    #legend.key.width = unit(0.6, "lines"),
+    legend.text = element_text(size = 7),
+    legend.title = element_text(size = 7),
     legend.margin=margin(0,0,0,0),
-    legend.box.margin=margin(-10,-10,0,-10)
+    legend.box.margin=margin(-10,-10,-5,-10)
   )
 
 ### Figure B - Effect size heatmap
 load("../data/barplot_pathways_fig2b.rda") ## load data
-fig5C <- pathway_counts %>% ggplot(aes(x = pathway, y = proportion, fill = color)) +
+fig5B <- pathway_counts %>% ggplot(aes(x = pathway, y = proportion, fill = color)) +
   geom_col() +
   facet_wrap(~clust_knn, ncol = 1, strip.position = "right") + ## facet by cluster and move facet label to the right
   ylab("Proportion of mutated samples") +
@@ -328,14 +287,10 @@ fig5C <- pathway_counts %>% ggplot(aes(x = pathway, y = proportion, fill = color
 
 ## Layout for plots using patchwork
 layout <- '
-AAABBBB
-AAABBBB
-AAABBBB
-AAACCCC
-AAACCCC
-AAACCCC
-AAACCCC
+AAABBB
+AAABBB
+AAABBB
 '
 
-fig5A + fig5B + fig5C + plot_layout(design = layout) + plot_annotation(tag_levels = "A")
+fig5A + fig5B  + plot_layout(design = layout) + plot_annotation(tag_levels = "A")
 ```
