minor edit to main doc

--- a/text/manuscript.Rmd
+++ b/text/manuscript.Rmd
@@ -477,8 +477,8 @@ cat("\\newpage")
 All code for producing the analyses and figures herein are included in this
 fully reproducible manuscript in R markdown format. R markdown files and all
 other models are available from [our
-repositories](https://github.com/dennishazelett/TTmanu) in the following
-locations on the distributed version control site GitHub.
+repositories](https://github.com/dennishazelett/TTmanu) on the distributed
+version control site, GitHub.
 
 ### Selection of pathways
 
