--- a/text/supplemental_methods.Rmd
+++ b/text/supplemental_methods.Rmd
@@ -111,9 +111,6 @@ results in some tumors remaining unclassified (grey points). f) kNN was used to
 assign membership to the remaining tumors.
 
 
-### Survival
-```{r child='../code/figureSM2.Rmd'}
-```
 
 In order to understand how the diagnosis of cancer changes the expectation for
 longevity of patients, we first modeled the longevity of the overall population
@@ -181,8 +178,14 @@ Black patient tumors, we use ethnicity only to identify the baseline risk
 function, while the tissue and class specific multipliers are not ethnicity
 specific.
 
-**supplementary figure SM2** gives a comparison on log-scale between
-the post-fit survival curves and the CDC data it is based on.
+### Survival
+```{r child='../code/figureSM2.Rmd'}
+```
+
+**supplementary figure SM2** gives a comparison between the post-fit
+survival curves for men and women vs the CDC data it is based on. This
+comparison does not distinguish on ethnicity for simplicity in
+visualization.
 
 As an aside, we did not explicitly account for stage at diagnosis in our model
 for the following reasons. In the tumor sample data, stage at diagnosis is
