--- a/text/survival.Rmd
+++ b/text/survival.Rmd
@@ -3,7 +3,7 @@ output:
   word_document: default
   html_document: default
 ---
-If our molecular pathway disruption classes represent distinct biological states
+If our molecular pathway disruption clusters represent distinct biological states
 apart from tissue of origin, they may have different prognoses within cancer
 types or across all cancers. These analyses are limited by confounding factors
 of age and stage at diagnosis, sex, ethnicity, and tissue-specific disease
@@ -35,9 +35,9 @@ cat("\\newpage")
 ```
 
 **Figure 7: Comparison of different cancers, simulated and actual results
-results.** To illustrate the risk model, we plot survival of four simulated
-cohorts. A) Compare survival of a group consisting of randomly selected 30 year old
-women (light blue) to an equal sized group of 30 year old women with cancer, k =
+results.** To illustrate the risk model, we compare survival of four simulated
+cohorts. A) A group consisting of randomly selected 30 year old
+women (light blue) vs. an equal sized group of 30 year old women with cancer, k =
 2 (light orange). To illustrate how the mix of ages alters the survival curve,
 we compare a randomly selected group of people with ages uniformly distributed
 from 30 to 70 (dark blue) and a randomly selected group with uniformly
@@ -76,8 +76,8 @@ can increase our expectation of life relative to the comparison group, even if
 it decreases the expectation of life of the individual relative to the
 counterfactual where they did not have cancer.
 
-The degree to which a given cancer accelerates aging can be determined by the
-$k_{tis}$ multiplier (**Figure 8**) multiplied by the class specific modifier
+The degree to which a given cancer accelerates mortality can be determined by
+the $k_{tis}$ multiplier (**Figure 8**) multiplied by the cluster modifier
 (**Figure 9**). Looking at the tissue specific multiplier, the least deadly was
 prostate cancer (PRAD), and the most deadly was glioblastoma (GBM) which has a
 risk multiplier of between 15 and 22 relative to the background risk of death in
@@ -117,35 +117,35 @@ cat("\\newpage")
 ```{r child='../code/figure9.Rmd'}
 ```
 
-**Figure 9 Class specific $k_{class}$ values shown for each cancer type.** The
-overall $k$ value is the product of $k_{tis} \times k_{class}$. The class
-specific value shows the relative aggressiveness of that particular class within
-the tissue. For example class 1, 2, and 6 Glioblastoma (GBM) are apparently much
-less deadly than other types of GBM. A similar situation can be seen with
-Pancreatic Cancer (PAAD) where 1, 6, and 8 are less deadly compared to classes
-7, 9, 10. For some cancer types there are few data points and little ability to
-estimate values with precision (DLBC and KICH for example).
+**Figure 9 Cluster specific $k_{cl}$ values for each cancer type.** The overall
+$k$ value is the product of $k_{tis} \times k_{cl}$. The cluster-specific value
+represents the relative aggressiveness of each cluster within the cancer type.
+For example clusters 1, 2, and 6 Glioblastoma (GBM) are apparently much less
+deadly than other types of GBM. A similar situation can be seen with Pancreatic
+Cancer (PAAD) where 1, 6, and 8 are less deadly compared to clusters 7, 9, 10.
+For some cancer types there are few data points and little ability to estimate
+values with precision (DLBC and KICH for example).
 
 
 ```{r, results='asis'}
 cat("\\newpage")
 ```
 
-Our estimates of tissue-specific class effects, in contrast, ranged from less
-than 1 up to about 3 or 4, reflecting that some classes are either less deadly
-or more deadly than other classes within each cancer types (**Figure 9**). A
-class specific rate of 1 represents typical rate for this tissue type. For
+Our estimates of tissue-specific cluster effects, in contrast, ranged from less
+than 1 up to about 3 or 4, reflecting that some clusters are either less deadly
+or more deadly than other clusters within each cancer type (**Figure 9**). A
+cluster-specific rate of 1 represents typical rate for this tissue type. For
 several cancers ( _e.g._ PRAD, kidney chromophobe (KICH), diffuse large B-cell
 lymphoma (DBLC), thyroid cancer (THCA)) the posterior estimates are largely
 indistinguishable from the prior, reflecting that either there were too few
 mortalities in the data to make an estimate (as expected for PRAD and THCA) or
-two few samples, period. We did not observe class-specific trends that held true
+two few samples, period. We did not observe cluster-specific trends that held true
 across cancer types, which could result from different cancers having different
 standards of care for example. In support of this interpretation, we also tested
-a factored model which considered both cancer type and each class independent of
+a factored model which considered both cancer type and each cluster independent of
 cancer type (not shown). Though we were able to successfully fit this model, it
-is a special case of the more general model where class and tissue can
-independently affect longevity, and there is no reason to believe that class
+is a special case of the more general model where cluster and tissue can
+independently affect longevity, and there is no reason to believe that cluster
 specific effects would necessarily remain constant across tissue types given how
 widely the patients vary across tissue types as well as the different drug and
 surgical treatments typically used for each tissue.
